modify function login apply JWT
